[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.4"
once_cell = "1.10.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
